+ Added Master Gantt chart. [Ivo]
+ an e-mail will be sent to project coordinators as soon as an employee
  registers time on a phase that hasn't started yet, or a phase that depens
  on a non-complete deliverable.
+ Added an initials field to persons (contacts and employees). [Guido]
+ Added ability to configure initial status of a scheduled item in
  calendar. [Dennis]
* Contracts that have expired are automatically set to status 'archived' at
  save-time. Also, its linked projects will be set to status 'nonactive'.
  [Dennis]
* When saving a contract with the status set to 'archived' the linked
  projects are all set to status 'nonactive'. [Dennis]
* Upgraded to ATK5 backend. [Ivo, Sandy, Dennis]
* Improved themability. [Boy]
* Fixed small bug in displaying the weeknumber on windows in the timereg
  weekview. [Sandy]
* Made role name obligatory. (bug #474) [Sandy]
* Moved employee financial fields to separate 'finance' tab. [Ivo]
* Title field for persons is now a dropdown instead of free input. [Ivo]
* Fixed: postAdd in modules/calender/class.schedule.inc should return a
  boolean. [Yury]
* Fixed several Gantt chart bugs. [Ivo]
* When editing a contract, a new project can be created which is then
  automatically added to the contract. [Dennis]
* When editing a contract, existing projects can be linked to the contract.
  [Dennis]
* Made some fields obligatory and some non-obligarory. [Dennis]
* In contracts added option 'no_billing_period'. [Dennis]
* In contracts added empty options for 'customer' and 'billing_period'.
  [Dennis]
* In contracts added javascript for dynamically hiding 'period_price' when
  choosing 'no_billing_period'. [Dennis]
* Fixed bug in setup module that installed patches in the wrong order if there
  are 10 or more patches. [Dennis, Ivo]
* Fixed: Error message appeared when deleting a phase. [Dennis]
* Updated Italian language file. [Fabrizio]
* Updated Danish language file. [Morten, Kent]
* Updated Spanish language file. [Ernesto]